# polylog

./: .gitignore  COMMANDS.md  GEMINI.md  Makefile  PRD.md  PROJECT_STATUS.md  README.md  docker-compose.yml  start-docker.bat  start-docker.sh
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  start.sh  start_server.sh  start_server_old.bat
backend/app/: __init__.py  crud.py  main.py  models.py  ws_manager.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  websocket.py
backend/app/core/: config.py  middleware.py
backend/app/db/: mongodb.py  redis.py
backend/app/services/: ai_service.py
backend/app/websocket/: __init__.py  connection_manager.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/assets/styles/: globals.css
frontend/src/components/auth/: GoogleSignIn.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  WebSocketContext.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  NotFoundPage.tsx
